--- a/order.html
+++ b/order.html
@@ -13,8 +13,9 @@
     <header class="header">
       <div class="wrapper">
         <div class="header__row"><a class="header__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a>
-          <nav class="header__nav"><a class="header__nav-link" href="/">Главная</a><a class="header__nav-link" href="/catalog.html">Каталог</a><a class="header__nav-link" href="/services.html">Услуги</a><a class="header__nav-link" href="/other.html">Другое</a><a class="header__nav-link" href="/portfolio.html">Портфолио</a><a class="header__nav-link" href="/order.html">Заказать</a><a class="header__nav-link" href="/about.html">О нас</a>
+          <nav class="header__nav"><a class="header__nav-link" href="/">Главная</a><a class="header__nav-link" href="/catalog.html">Каталог</a><a class="header__nav-link" href="/services.html">Услуги</a><a class="header__nav-link" href="/other.html">Другое</a><a class="header__nav-link" href="/portfolio.html">Портфолио</a><a class="header__nav-link" href="/about.html">О нас</a>
           </nav><a class="header__phone" href="tel:8 (4852) 67-07-98">8 (4852) 67-07-98</a>
+          <button class="header__burger js-menu-toggler"><span></span></button>
         </div>
       </div>
     </header>
@@ -47,7 +48,7 @@
           </div>
         </div>
       </section>
-      <section class="section" style="background-image: url(img/contacts-bg.jpg)">
+      <section class="section" data-bg="img/contacts-bg.jpg">
         <div class="wrapper">
           <div class="section__heading">
             <h2 class="section__title"><b>Контакты</b></h2>
@@ -102,15 +103,15 @@
       <div class="wrapper">
         <div class="footer__main">
           <div class="footer__row">
-            <div class="footer__col"><a class="footer__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a></div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_logo"><a class="footer__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a></div>
+            <div class="footer__col footer__col_nav">
               <div class="footer__nav">
                 <h3 class="footer__nav-title">Меню сайта</h3>
-                <nav class="footer__nav-menu"><a class="footer__nav-link" href="/">Главная</a><a class="footer__nav-link" href="/catalog.html">Каталог</a><a class="footer__nav-link" href="/services.html">Услуги</a><a class="footer__nav-link" href="/other.html">Другое</a><a class="footer__nav-link" href="/portfolio.html">Портфолио</a><a class="footer__nav-link" href="/order.html">Заказать</a><a class="footer__nav-link" href="/about.html">О нас</a>
+                <nav class="footer__nav-menu"><a class="footer__nav-link" href="/">Главная</a><a class="footer__nav-link" href="/catalog.html">Каталог</a><a class="footer__nav-link" href="/services.html">Услуги</a><a class="footer__nav-link" href="/other.html">Другое</a><a class="footer__nav-link" href="/portfolio.html">Портфолио</a><a class="footer__nav-link" href="/about.html">О нас</a>
                 </nav>
               </div>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_contacts">
               <a class="btn btn_medium footer__btn js-get-modal" href="#callbackModal"><span class="btn__inner"><span class="btn__text">Заказать звонок</span>
                   <svg>
                     <use xlink:href="sprites/sprite-mono.svg#ring"></use>
@@ -139,15 +140,15 @@
         </div>
         <div class="footer__bottom">
           <div class="footer__row">
-            <div class="footer__col">
+            <div class="footer__col footer__col_reserved">
               <div class="footer__reserved">Все права защищены 2022</div>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_developers">
               <div class="footer__developers">
                 <div class="footer__developers-title">Сайт разработан:</div><a class="footer__developers-link" href="https://vk.com/irshatdesign" target="_blank">Дизайн — Иршат Зайнуллин</a><a class="footer__developers-link" href="https://vk.com/twixer554" target="_blank">Программирование — Никита Таланов</a>
               </div>
             </div>
-            <div class="footer__col"><a class="footer__privacy" href="/privacy" target="_blank">Политика конфиденциальности</a></div>
+            <div class="footer__col footer__col_privacy"><a class="footer__privacy" href="/privacy" target="_blank">Политика конфиденциальности</a></div>
           </div>
         </div>
       </div>
