--- a/catalog.html
+++ b/catalog.html
@@ -13,13 +13,14 @@
     <header class="header">
       <div class="wrapper">
         <div class="header__row"><a class="header__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a>
-          <nav class="header__nav"><a class="header__nav-link" href="/">Главная</a><a class="header__nav-link" href="/catalog.html">Каталог</a><a class="header__nav-link" href="/services.html">Услуги</a><a class="header__nav-link" href="/other.html">Другое</a><a class="header__nav-link" href="/portfolio.html">Портфолио</a><a class="header__nav-link" href="/order.html">Заказать</a><a class="header__nav-link" href="/about.html">О нас</a>
+          <nav class="header__nav"><a class="header__nav-link" href="/">Главная</a><a class="header__nav-link" href="/catalog.html">Каталог</a><a class="header__nav-link" href="/services.html">Услуги</a><a class="header__nav-link" href="/other.html">Другое</a><a class="header__nav-link" href="/portfolio.html">Портфолио</a><a class="header__nav-link" href="/about.html">О нас</a>
           </nav><a class="header__phone" href="tel:8 (4852) 67-07-98">8 (4852) 67-07-98</a>
+          <button class="header__burger js-menu-toggler"><span></span></button>
         </div>
       </div>
     </header>
     <div class="page">
-      <section class="hero" style="background-image: url(img/hero-catalog.jpg)">
+      <section class="hero" data-bg="img/hero-catalog.jpg" data-mobile-bg="img/hero-catalog-xs.jpg">
         <div class="wrapper">
           <h1 class="hero__title">Каталог лестниц</h1>
           <div class="hero__actions">
@@ -98,22 +99,6 @@
                       </svg></span><span class="checkbox__label">Для дачи</span>
                   </label>
                 </div>
-                <div class="catalog__from-to">
-                  <div class="from-to">
-                    <div class="from-to__row">
-                      <div class="from-to__item">
-                        <div class="from-to__label">От</div>
-                        <input class="from-to__input js-from-to-input" type="number" name="filter_min" value="0" min="0"/>
-                        <div class="from-to__placeholder js-from-to-placeholder">руб</div>
-                      </div>
-                      <div class="from-to__item">
-                        <div class="from-to__label">До</div>
-                        <input class="from-to__input js-from-to-input" type="number" name="filter_max" value="65000" maxn="65000"/>
-                        <div class="from-to__placeholder js-from-to-placeholder">руб</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
               <div class="catalog__row">
                 <div class="catalog-card catalog__card">
@@ -122,7 +107,7 @@
                   <div class="catalog-card__info">
                     <h3 class="catalog-card__title">Название товара</h3>
                     <div class="catalog-card__price">28.900 руб</div>
-                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="#">Подробнее</a>
+                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="/single-product.html">Подробнее</a>
                   </div>
                 </div>
                 <div class="catalog-card catalog__card">
@@ -131,7 +116,7 @@
                   <div class="catalog-card__info">
                     <h3 class="catalog-card__title">Название товара</h3>
                     <div class="catalog-card__price">28.900 руб</div>
-                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="#">Подробнее</a>
+                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="/single-product.html">Подробнее</a>
                   </div>
                 </div>
                 <div class="catalog-card catalog__card">
@@ -140,7 +125,7 @@
                   <div class="catalog-card__info">
                     <h3 class="catalog-card__title">Название товара</h3>
                     <div class="catalog-card__price">28.900 руб</div>
-                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="#">Подробнее</a>
+                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="/single-product.html">Подробнее</a>
                   </div>
                 </div>
                 <div class="catalog-card catalog__card">
@@ -149,7 +134,7 @@
                   <div class="catalog-card__info">
                     <h3 class="catalog-card__title">Название товара</h3>
                     <div class="catalog-card__price">28.900 руб</div>
-                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="#">Подробнее</a>
+                    <div class="catalog-card__old-price">43.900 руб</div><a class="catalog-card__link" href="/single-product.html">Подробнее</a>
                   </div>
                 </div>
               </div>
@@ -188,7 +173,7 @@
           </div>
         </div>
       </section>
-      <section class="section" style="background-image: url(img/contacts-bg.jpg)">
+      <section class="section" data-bg="img/contacts-bg.jpg">
         <div class="wrapper">
           <div class="section__heading">
             <h2 class="section__title"><b>Контакты</b></h2>
@@ -243,15 +228,15 @@
       <div class="wrapper">
         <div class="footer__main">
           <div class="footer__row">
-            <div class="footer__col"><a class="footer__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a></div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_logo"><a class="footer__logo" href="/"><img data-src="img/logo.png" srcset="img/logo@2x.png" alt=""/></a></div>
+            <div class="footer__col footer__col_nav">
               <div class="footer__nav">
                 <h3 class="footer__nav-title">Меню сайта</h3>
-                <nav class="footer__nav-menu"><a class="footer__nav-link" href="/">Главная</a><a class="footer__nav-link" href="/catalog.html">Каталог</a><a class="footer__nav-link" href="/services.html">Услуги</a><a class="footer__nav-link" href="/other.html">Другое</a><a class="footer__nav-link" href="/portfolio.html">Портфолио</a><a class="footer__nav-link" href="/order.html">Заказать</a><a class="footer__nav-link" href="/about.html">О нас</a>
+                <nav class="footer__nav-menu"><a class="footer__nav-link" href="/">Главная</a><a class="footer__nav-link" href="/catalog.html">Каталог</a><a class="footer__nav-link" href="/services.html">Услуги</a><a class="footer__nav-link" href="/other.html">Другое</a><a class="footer__nav-link" href="/portfolio.html">Портфолио</a><a class="footer__nav-link" href="/about.html">О нас</a>
                 </nav>
               </div>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_contacts">
               <a class="btn btn_medium footer__btn js-get-modal" href="#callbackModal"><span class="btn__inner"><span class="btn__text">Заказать звонок</span>
                   <svg>
                     <use xlink:href="sprites/sprite-mono.svg#ring"></use>
@@ -280,15 +265,15 @@
         </div>
         <div class="footer__bottom">
           <div class="footer__row">
-            <div class="footer__col">
+            <div class="footer__col footer__col_reserved">
               <div class="footer__reserved">Все права защищены 2022</div>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col_developers">
               <div class="footer__developers">
                 <div class="footer__developers-title">Сайт разработан:</div><a class="footer__developers-link" href="https://vk.com/irshatdesign" target="_blank">Дизайн — Иршат Зайнуллин</a><a class="footer__developers-link" href="https://vk.com/twixer554" target="_blank">Программирование — Никита Таланов</a>
               </div>
             </div>
-            <div class="footer__col"><a class="footer__privacy" href="/privacy" target="_blank">Политика конфиденциальности</a></div>
+            <div class="footer__col footer__col_privacy"><a class="footer__privacy" href="/privacy" target="_blank">Политика конфиденциальности</a></div>
           </div>
         </div>
       </div>
